k8s/parte1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-quarkus-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-quarkus
  template:
    metadata:
      labels:
        app: demo-quarkus
        env: dev
    spec:
      containers:
        - name: demo-quarkus
          image: eduardomelle/demo-quarkus:1.0-SNAPSHOT
          imagePullPolicy: Always
          #resources:
          #limits:
          #memory: "128Mi"
          #cpu: "500m"
          ports:
            - containerPort: 8080
