k8s/parte1/naked-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-quarkus
spec:
  containers:
    - name: demo-quarkus
      image: eduardomelle/demo-quarkus:1.0.0-SNAPSHOT
