k8s/parte1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-quarkus-svc
spec:
  selector:
    app: demo-quarkus
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: LoadBalancer
