k8s/parte1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-quarkus-ingress
  namespace: eduardomelle-dev
spec:
  rules:
    - host: demo-quarkus.apps.sandbox-m2.ll9k.p1.openshiftapps.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: demo-quarkus-svc
                port:
                  number: 80
